dummy-rest-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dummy-rest-api
spec:
  selector:
    matchLabels:
      app: spring-boot-k8s
  replicas: 3
  template:
    metadata:
      labels:
        app: spring-boot-k8s
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: kubernetes.io/hostname
                    operator: NotIn
                    values:
                      - ubuntu
      containers:
        - name: spring-boot-k8s
          image: thecatfishy/dummy-rest-api:1.0.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /Ping
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 10
