load-balancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: dummy-rest-api-service
spec:
  selector:
    app: spring-boot-k8s
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
      nodePort: 30007 # Choose an unused port
  type: NodePort
