ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dummy-ingress
spec:
  tls:
    - secretName: tls-secret  # Reference the name of the Kubernetes Secret containing TLS keys
  rules:
    - http:
        paths:
          - pathType: Exact
            path: "/Ping"
            backend:
              service:
                name: dummy-rest-api-service
                port:
                  number: 80
